# CTULib

./: .gitignore  .travis.yml  CMakeLists.txt  CthulhuLib  LICENSE  Makefile  README.md  azure-pipelines.yml  buck  buckaroo.lock.toml  buckaroo.toml  meson.build
Cthulhu/: Cthulhu.h
Cthulhu/Core/Algo/: Dragon4.cpp  Dragon4.h
Cthulhu/Core/Collections/: Array.h  CthulhuString.cpp  CthulhuString.h  Iterator.h  List.h  Map.h  Option.h  Pair.h  Range.cpp  Range.h  Result.h
Cthulhu/Core/Math/: Bytes.h  Hash.h  Limits.h  Math.h  SIMD.h
Cthulhu/Core/Memory/: Binary.h  Block.h  Buffer.h  Deleter.h  Memory.h  Shared.h  Unique.h
Cthulhu/Core/Other/: README.md  Sleep.h
Cthulhu/Core/Reflection/: Reflection.h
Cthulhu/Core/Serialization/: Hash.h  Hashes.h  JSON.cpp  JSON.h  Stringify.h
Cthulhu/Core/Standard/: CPUInfo.cpp  CPUInfo.h  Exit.cpp  Exit.h  InitList.h  README.md  Size.h  Sleep.h
Cthulhu/Core/Templates/: Decay.h  Forward.h  Invoke.h  Remove.h  Traits.h
Cthulhu/Core/Threading/: Atomic.h  Future.h  Mutex.cpp  Mutex.h  Queue.h  Thread.cpp  Thread.h
Cthulhu/Core/Traits/: Arithmatic.h  Flags.h  Forward.h  Invoke.h  IsPOD.h  IsSame.h  IsTrivial.h  Logic.h  Opposite.h  README.md  Remove.h  Traits.h
Cthulhu/Core/Types/: Errno.cpp  Errno.h  Lambda.h  Types.h
Cthulhu/Engine/: Colour.h  Vector.cpp  Vector.h
Cthulhu/Engine/Core/: Vector.h
Cthulhu/Engine/Display/: Display.h  Event.h  Window.h
Cthulhu/Engine/Display/Internal/: DirectXWindow.cpp  WindowWrapper.cpp
Cthulhu/FileSystem/: BufferedFile.cpp  BufferedFile.h  Directory.h  FastFile.cpp  FastFile.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h
Cthulhu/FileSystem/Old/: File.h
Cthulhu/Graphics/: AppDelegate.h  Button.h  DrawHandle.h  Graphics.h  Image.h  Path.h  Types.cpp  Types.h  View.h  Window.h
Cthulhu/Graphics/Darwin/: Buttom.mm  Button.h  DrawHandle.h  DrawHandle.mm  Graphics.h  Graphics.mm  Image.h  Internal.h  Path.h  Path.mm  View.h  Window.h  Window.mm
Cthulhu/Graphics/Darwin/Internal/: Application.h  Application.mm  ApplicationDelegate.h  ApplicationDelegate.mm  Button.h  Button.mm  Globals.cpp  Globals.h  View.h  View.mm  Window.h  Window.mm  WindowDelegate.h  WindowDelegate.mm
Cthulhu/Graphics/Linux/: Window.cpp  Window.h
Cthulhu/Graphics/Windows/: Window.cpp  Window.h
Cthulhu/Internationalization/: Text.h
Cthulhu/Meta/: Aliases.h  Assert.h  Macros.h  System.cpp  System.h
Cthulhu/OS/: OS.h
Cthulhu/WebSockets/: WebSocket.h
Programs/: README.md
Programs/Lang/: Logger.cpp  Logger.h  Main.cpp
Programs/Lang/FastFile/: FastFile.h
Programs/Lang/Lexer/: Lexer.cpp  Lexer.h
Programs/Lang/Parser/: Parser.h  Structures.h
Programs/Lang/Spec/: Grammar.md  LanguageGrammar.md
Programs/Lang/Utils/: Error.cpp  Error.h
Programs/Lang/Utils/Error/: Error.cpp  Error.h
Programs/Lang/Utils/FastFile/: FastFile.cpp  FastFile.h
Programs/Summon/: Main.cpp  README.md
Programs/Summon/Caching/: Caching.cpp  Caching.h
Programs/Summon/Config/: Reader.cpp  Reader.h
Programs/Summon/Reader/: Parser.cpp
Programs/Summon/Source/: Main.cpp
Programs/Summon/Source/TomeReader/: Lex.cpp  Lex.h  Parse.cpp  Parse.h
Programs/Summon/Source/Utils/: Build.cpp  Build.h
Programs/Tests/: Array.cpp  Map.cpp  README.md  Range.cpp  String.cpp  StringMisc.cpp  StringPerf.cpp  TestMacros.h  TestUtils.h
Programs/Tests/Collections/: Macros.h  Main.cpp  Map.h  String.h
Programs/Tests/Core/Collections/: OptionalTests.cpp  Result.cpp
Programs/Tests/Core/Types/: Lambda.cpp
Programs/Tests/Engine/: Window.cpp
Programs/Tests/Files/: Directory.cpp  File.cpp
Programs/Tests/JSON/: JSON.cpp
Source/Core/Collections/: Array.h  CthulhuString.cpp  CthulhuString.h  HashMap.h  Iterator.h  List.h  Map.h  Optional.h  Pair.h  Result.h
Source/Core/Math/: Math.h
Source/Core/Memory/: Deleter.h  Memory.h  SharedPtr.h  UniquePtr.h
Source/Core/Templates/: Decay.h  Invoke.h  Traits.h
Source/Core/Threading/: Future.h  Thread.h  ThreadPool.h
Source/Core/Types/: Date.h  Lambda.h
Source/FileSystem/: Directory.h  File.h  FileSystem.cpp  FileSystem.h
Source/Meta/: Aliases.h  Assert.h  Macros.h
Tests/: Macros.h
Tests/Core/Collections/: String.cpp
Tests/Core/Math/: SIMD.cpp
